# magic

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  binary_search.h  index_sequence.h  main.cpp  name_of.h  quick_power.h  reflection.h  traits.h  tuple.h  type_of.h  util.h
examples/: examples_util.h  main.cpp  test_binary_search.cpp  test_binary_search.h  test_name_of.cpp  test_name_of.h  test_quick_power.cpp  test_quick_power.h  test_reflection.cpp  test_reflection.h  test_tuple.cpp  test_tuple.h
src/: binary_search.h  currying.h  index_sequence.h  quick_power.h  reflection.h  traits.h  tuple.h  type_of.h  util.h
